changed image loading process for admin and updated participated lots view

--- a/src/components/pages/Lots/FilterPanel/FilterPanel.css
+++ b/src/components/pages/Lots/FilterPanel/FilterPanel.css
@@ -151,3 +151,9 @@ label{
     flex-direction: row;
     margin-bottom: 0.3rem;
 }
+
+@media(max-width: 50rem){
+    .filter-panel{
+        display: none;
+    }
+}
